--- a/KYTech.html
+++ b/KYTech.html
@@ -43,25 +43,25 @@
     <h1>Responsive Image Gallery</h1>
     <div class="responsive">
         <div class="gallery">
-            <a href="img/1.jpg" target="_blank"><img src="img/1.jpg" width="300" height="200"></a>
+            <a href="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/" target="_blank"><img src="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/"></a>
             <div class="des">Add a Description of the image here</div>
         </div>
     </div>
      <div class="responsive">
         <div class="gallery">
-            <a href="img/2.jpg" target="_blank"><img src="img/2.jpg" width="300" height="200"></a>
+            <a href="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/" target="_blank"><img src="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/" ></a>
             <div class="des">Add a Description of the image here</div>
         </div>
     </div>
      <div class="responsive">
         <div class="gallery">
-            <a href="img/3.jpg" target="_blank"><img src="img/3.jpg" width="300" height="200"></a>
+            <a href="https://www.pexels.com/photo/selective-focus-photography-of-dandelion-2293372/" target="_blank"><img src="https://www.pexels.com/photo/selective-focus-photography-of-dandelion-2293372/" ></a>
             <div class="des">Add a Description of the image here</div>
         </div>
     </div>
      <div class="responsive">
         <div class="gallery">
-            <a href="img/4.jpg" target="_blank"><img src="img/4.jpg" width="300" height="200"></a>
+            <a href="https://www.pexels.com/photo/selective-focus-photography-of-dandelion-2293372/" target="_blank"><img src="https://www.pexels.com/photo/selective-focus-photography-of-dandelion-2293372/"></a>
             <div class="des">Add a Description of the image here</div>
         </div>
     </div>
