--- a/KYTech.html
+++ b/KYTech.html
@@ -3,7 +3,7 @@
 <head>
   
  <style>
-        {
+        *{
             box-sizing: border-box;
         }
         
@@ -16,7 +16,7 @@
         height: auto;
         }
         
-        div.desc{
+        div.desc {
             padding: 10px;
             text-align: center;
         }
@@ -38,7 +38,9 @@
                 width: 100%;
             }
         }
+  </style>  
 </head>
+   
 <body>
     <h1>Responsive Image Gallery</h1>
     <div class="responsive">
