--- a/KYTech.html
+++ b/KYTech.html
@@ -45,13 +45,13 @@
     <h1>Responsive Image Gallery</h1>
     <div class="responsive">
         <div class="gallery">
-            <a href="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/.jpg" target="_blank"><img src="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/.jpg"></a>
+            <a href="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/.jpg" target="_blank"><img src="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/.jpg"> width="300" height="200" </a>
             <div class="des">Add a Description of the image here</div>
         </div>
     </div>
      <div class="responsive">
         <div class="gallery">
-            <a href="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/.jpg" target="_blank"><img src="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/.jpg" ></a>
+            <a href="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/.jpg" target="_blank"><img src="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/.jpg" > width="300" height="200" </a>
             <div class="des">Add a Description of the image here</div>
         </div>
    
