--- a/KYTech.html
+++ b/KYTech.html
@@ -45,13 +45,14 @@
     <h1>Responsive Image Gallery</h1>
     <div class="responsive">
         <div class="gallery">
-            <a href="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/.jpg" target="_blank"><img src="https://www.pexels.com/photo/beautiful-bloom-blossom-bright-541484/.jpg"> width="300" height="200" </a>
+            <a href="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" target="_blank"><img src="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" width="300" height="200" </a>
+           
             <div class="des">Add a Description of the image here</div>
         </div>
     </div>
      <div class="responsive">
         <div class="gallery">
-            <a href="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/.jpg" target="_blank"><img src="https://www.pexels.com/photo/battle-board-board-game-challenge-541486/.jpg" > width="300" height="200" </a>
+            <a href="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" target="_blank"><img src="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" > width="300" height="200" </a>
             <div class="des">Add a Description of the image here</div>
         </div>
    
