--- a/KYTech.html
+++ b/KYTech.html
@@ -10,6 +10,8 @@
         div.gallery{
             border:1px solid #ccc;
         }
+        div.gallery:hover {
+        border: 10px solid #777;
         
         div.gallery img{
         width: 100%;
@@ -47,13 +49,13 @@
         <div class="gallery">
             <a href="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" target="_blank"><img src="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" width="300" height="200" </a>
            
-            <div class="des">Add a Description of the image here</div>
+            <div class="des">Waterfall</div>
         </div>
     </div>
      <div class="responsive">
         <div class="gallery">
-            <a href="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" target="_blank"><img src="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" > width="300" height="200" </a>
-            <div class="des">Add a Description of the image here</div>
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" > width="300" height="200" </a>
+            <div class="des">Forest</div>
         </div>
    
 </body>
