--- a/KYTech.html
+++ b/KYTech.html
@@ -40,7 +40,14 @@
                 width: 100%;
             }
         }
-  </style>  
+          
+          .clearfix:after {
+            content: "";
+            display: table;
+            clear: both;
+            </style> 
+            }
+</style>
 </head>
    
 <body>
