--- a/KYTech.html
+++ b/KYTech.html
@@ -65,6 +65,36 @@
             <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
             <div class="des">Forest</div>
         </div>
+   <div class="responsive">
+        <div class="gallery">
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <div class="des">Forest</div>
+        </div>
+   <div class="responsive">
+        <div class="gallery">
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <div class="des">Forest</div>
+        </div>
+   <div class="responsive">
+        <div class="gallery">
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <div class="des">Forest</div>
+        </div>
+   <div class="responsive">
+        <div class="gallery">
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <div class="des">Forest</div>
+        </div>
+   <div class="responsive">
+        <div class="gallery">
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <div class="des">Forest</div>
+        </div>
+   <div class="responsive">
+        <div class="gallery">
+            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <div class="des">Forest</div>
+        </div>
    
 </body>
 </html>
