--- a/KYTech.html
+++ b/KYTech.html
@@ -67,7 +67,7 @@
         </div>
    <div class="responsive">
         <div class="gallery">
-            <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="600" height="400"> </a>
+            <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages.pexels.com%2Fphotos%2F67636%2Frose-blue-flower-rose-blooms-67636.jpeg%3Fauto%3Dcompress%26cs%3Dtinysrgb%26dpr%3D1%26w%3D500&imgrefurl=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fbeauty%2F&docid=pFs_4Fcq5AgpmM&tbnid=CJwabmfmxl2ySM%3A&vet=10ahUKEwjw_8Xmq8jiAhWUf30KHRdWD5IQMwh8KAAwAA..i&w=500&h=331&bih=743&biw=1536&q=images&ved=0ahUKEwjw_8Xmq8jiAhWUf30KHRdWD5IQMwh8KAAwAA&iact=mrc&uact=8"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages.pexels.com%2Fphotos%2F67636%2Frose-blue-flower-rose-blooms-67636.jpeg%3Fauto%3Dcompress%26cs%3Dtinysrgb%26dpr%3D1%26w%3D500&imgrefurl=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fbeauty%2F&docid=pFs_4Fcq5AgpmM&tbnid=CJwabmfmxl2ySM%3A&vet=10ahUKEwjw_8Xmq8jiAhWUf30KHRdWD5IQMwh8KAAwAA..i&w=500&h=331&bih=743&biw=1536&q=images&ved=0ahUKEwjw_8Xmq8jiAhWUf30KHRdWD5IQMwh8KAAwAA&iact=mrc&uact=8" width="600" height="400"> </a>
             <div class="des">Forest</div>
         </div>
    <div class="responsive">
