--- a/KYTech.html
+++ b/KYTech.html
@@ -75,6 +75,8 @@
             <a href="https://www.w3schools.com/css/img_forest.jpg" target="_blank"><img src="https://www.w3schools.com/css/img_forest.jpg" width="300" height="200"> </a>
             <div class="des">Forest</div>
         </div>
+     
+   <div class="clearfix"></div>
 
 </body>
 </html>
