--- a/KYTech.html
+++ b/KYTech.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <style>
-body{background-color:#848484;}
+body{ background-image: url("paper.gif");
+}
 div.gallery {
   border: 1px solid #ccc;
 }
@@ -30,13 +31,11 @@ border:1px solid red;
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
-border:1px solid red;
   }
 }
 @media only screen and (max-width: 500px) {
   .responsive {
     width: 100%;
-border:1px solid red;
   }
 }
 .clearfix:after {
