--- a/KYTech.html
+++ b/KYTech.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body{ background-image: https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjmzr6OssjiAhWVfSsKHVXFAQMQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fbrick%2520wall%2F&psig=AOvVaw0aECXN79JcSSDe_X26CcdU&ust=1559482217080895;
+body{ background-image:https://www.pexels.com/photo/nature-red-love-romantic-67636/;
 }
 div.gallery {
   border: 1px solid #ccc;
