--- a/KYTech.html
+++ b/KYTech.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body{ background-image:https://www.pexels.com/photo/nature-red-love-romantic-67636/;
+body{ background-image:url('https://www.pexels.com/photo/nature-red-love-romantic-67636/');
 }
 div.gallery {
   border: 1px solid #ccc;
