--- a/KYTech.html
+++ b/KYTech.html
@@ -46,29 +46,26 @@ border:1px solid red;
 </style>
 </head>
 <body>
-<h1>the nature's beauty to see n njoy</h1>
-<p>1.keralamkundu water falls</p>
+<h3>Responsive Image Gallery</h3>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg">
       <img src="https://c1.hiqcdn.com/customcdn/1300x512/destreviewimages/1491281212_rotates_shareiq__1476693552.492112.jpg" alt="keralamkundu water falls" width="600" height="400"  title='keralamkundu water falls'>
     </a>
-    <div class="desc">keralamkundu water falls</div>
+    <div class="desc">waterfall</div>
   </div>
 <br>
-</div>
-<p>2.cinque terre</p>
+  </div>
 
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.w3schools.com/css/img_5terre.jpg">
       <img src="https://www.w3schools.com/css/img_5terre.jpg" alt="Cinque Terre" width="600" height="400"  title='Cinque Terre'>
     </a>
-    <div class="desc">cinque terre</div>
+    <div class="desc">nature</div>
   </div>
 <br>
 </div>
-<p>3.northern lights</p>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.w3schools.com/css/img_lights.jpg">
@@ -78,7 +75,6 @@ border:1px solid red;
   </div>
 <br>
 </div>
-<p>4.mountains</p>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.w3schools.com/css/img_mountains.jpg">
@@ -91,8 +87,8 @@ border:1px solid red;
 <p>5.havasu water falls</p>
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="https://thumbs-prod.si-cdn.com/VNaEZMZLkvxoxBRwiHg0iwcqzz8=/800x600/filters:no_upscale():focal(452x280:453x281)/https://public-media.si-cdn.com/filer/b0/e2/b0e22e41-79d2-418e-9c55-01e396bd9891/istock-892494008.jpg">
-      <img src="https://thumbs-prod.si-cdn.com/VNaEZMZLkvxoxBRwiHg0iwcqzz8=/800x600/filters:no_upscale():focal(452x280:453x281)/https://public-media.si-cdn.com/filer/b0/e2/b0e22e41-79d2-418e-9c55-01e396bd9891/istock-892494008.jpg"  alt='havasu water falls' width="600" height="400"  title='havasu water falls'>
+    <a target="_blank" href="https://cdn7.dissolve.com/p/D1129_13_201/D1129_13_201_1200.jpg">
+      <img src="https://cdn7.dissolve.com/p/D1129_13_201/D1129_13_201_1200.jpg"  alt='havasu water falls' width="600" height="400"  title='havasu water falls'>
     </a>
     <div class="desc">havasu water falls</div>
   </div>
@@ -110,7 +106,6 @@ border:1px solid red;
   </div>
 <br>
 </div>
-<p>7.michigan water falls</p>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://scontent.fvga2-1.fna.fbcdn.net/v/t1.0-9/35919_225377570928657_2005280865_n.jpg?_nc_cat=104&_nc_ht=scontent.fvga2-1.fna&oh=6a347f3323c3fe674d87fb75a2f33d52&oe=5D88631F">
