--- a/KYTech.html
+++ b/KYTech.html
@@ -86,6 +86,36 @@ border:1px solid blue;
   </div>
 <br>
 </div>
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://www.w3schools.com/css/img_forest.jpg">
+      <img src="https://www.w3schools.com/css/img_forest.jpg" alt="Forest" width="600" height="400"  title='forest'>
+    </a>
+    <div class="desc">forest</div>
+  </div>
+<br>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://cdn9.dissolve.com/p/D574_238_183/D574_238_183_1200.jpg">
+      <img src="https://cdn9.dissolve.com/p/D574_238_183/D574_238_183_1200.jpg" alt="bridge" width="600" height="400"  title='Bridge'>
+    </a>
+    <div class="desc">bridge</div>
+  </div>
+<br>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://cdn7.dissolve.com/p/D9_37_301/D9_37_301_1200.jpg">
+      <img src="https://cdn7.dissolve.com/p/D9_37_301/D9_37_301_1200.jpg" alt="Aerial View" width="600" height="400"  title='Aerial View'>
+    </a>
+    <div class="desc">Aerial View</div>
+  </div>
+<br>
+</div>
+
+
 
 
 
